# md2pdf.desktop

./: .gitignore  appxmanifest.xml  index.html  package-lock.json  package.json  sample.md  vite.config.ts
scripts/: msix.bat
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
