[package]
name = "md2pdf-desktop"
version = "1.0.0"
description = "Markdown to PDF converter with KaTeX support"
authors = ["Your Name"]
edition = "2021"

[lib]
name = "md2pdf_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.10", features = ["html"] }
comrak = "0.38"
headless_chrome = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
base64 = "0.21"
anyhow = "1.0.101"
regex = "1.12.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
